# round1_triagex

./: Dockerfile  README.md  inference.py  pyproject.toml
client/: README.md
docs/: architecture.md  demo-script.md  reward-design.md  task-design.md
scripts/: generate-report.js
server/: README_SERVER.md  app.py
server/src/config/: env.js
server/src/controllers/: envController.js
server/src/engine/: grader.js  simulator.js
server/src/routes/: envRoutes.js
server/src/tests/: grader.test.js
server/src/utils/: scoreUtils.js
