[project]
name = "triage-x"
version = "1.0.0"
description = "TRIAGE-X: SRE Incident Response Benchmark for OpenEnv"
authors = [
    { name = "Mohit Mudgil" }
]
dependencies = [
    "openai>=1.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
